<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.ChangePasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#885ADB"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Theme.AppCompat.NoActionBar">

            <ImageView
                android:id="@+id/back_button_iv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/back"
                android:src="@drawable/baseline_arrow_back_24" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/oldPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_old_password"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/oldPasswordEditText"
            android:hint="@string/enter_new_password"
            android:autofillHints="password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newPasswordEditText"
            android:hint="@string/confirm_new_password"
            android:autofillHints="password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmPasswordEditText"
            android:layout_centerHorizontal="true"
            android:text="@string/change_password" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>