<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activity.SettingsActivity">


    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setting_app_bar">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="#885ADB"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.AppCompat.NoActionBar">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:id="@+id/back_button_iv"/>

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:layout_gravity="start"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/dark_mode_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:text="Dark Mode"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_app_bar" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/light_dark_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/dark_mode_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dark_mode_tv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_pass_btn"
        android:text="@string/change_password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/Lavender"
        app:layout_constraintTop_toBottomOf="@id/dark_mode_tv"
        app:layout_constraintStart_toStartOf="@id/dark_mode_tv"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"/>


    <Button
        android:id="@+id/log_out_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_signup"
        android:text="@string/log_out"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="@+id/change_pass_btn"
        app:layout_constraintStart_toStartOf="@+id/change_pass_btn"
        app:layout_constraintTop_toBottomOf="@id/change_pass_btn" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/feedback_tv"
        android:text="@string/have_feedback_for_us_submit_here"
        app:layout_constraintTop_toBottomOf="@id/log_out_btn"
        app:layout_constraintStart_toStartOf="@id/log_out_btn"
        app:layout_constraintEnd_toEndOf="@id/log_out_btn"
        android:layout_margin="20dp"
        android:textColor="@color/Lavender"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>